5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1793_1593.log
== TEST (2019-05-30 18:23:08) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
total=sum(notas,dtype=float)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:23:21) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
total=sum(notas,dtype=float)
print(round(total,2))
-- EXECUTION TIME:
0.47541
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
18.86
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
5.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
4.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:27:14) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
notas[1]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:27:38) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
print[2]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:28:02) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
print([1])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:28:26) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
print(notas[1])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:29:03) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
print(array[1])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:36:49) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))

print(array[1])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:37:18) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))

print(notas[0])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:37:44) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))

print(notas[0])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:41:20) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*2
c=notas[2]*3
d=notas[3]*4
media=a+b+c+d/4
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:42:04) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*2
c=notas[2]*3
d=notas[3]*4
media=a+b+c+d/4
print(round(media,2))

-- EXECUTION TIME:
0.442303
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
39.98
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:42:07) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*2
c=notas[2]*3
d=notas[3]*4
media=a+b+c+d/4
print(round(media,2))

-- EXECUTION TIME:
0.125648
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1793/1593/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:42:10) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*2
c=notas[2]*3
d=notas[3]*4
media=a+b+c+d/4
print(round(media,2))

-- EXECUTION TIME:
2.03161
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
39.98
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:

-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:42:10) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*2
c=notas[2]*3
d=notas[3]*4
media=a+b+c+d/4
print(round(media,2))

-- EXECUTION TIME:
1.82795
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
39.98
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
39.98
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:42:11) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*2
c=notas[2]*3
d=notas[3]*4
media=a+b+c+d/4
print(round(media,2))

-- EXECUTION TIME:
2.2254
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
39.98
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:

-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:42:11) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*2
c=notas[2]*3
d=notas[3]*4
media=a+b+c+d/4
print(round(media,2))

-- EXECUTION TIME:
2.74902
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
10.5
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:

-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:42:11) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*2
c=notas[2]*3
d=notas[3]*4
media=a+b+c+d/4
print(round(media,2))

-- EXECUTION TIME:
2.55493
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
10.5
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:42:17) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*2
c=notas[2]*3
d=notas[3]*4
media=a+b+c+d//4
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:42:46) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*2
c=notas[2]*3
d=notas[3]*4
media=a+b+c+d/4
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:43:16) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*2
c=notas[2]*3
d=notas[3]*4
media=a+b+c+d/10
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:43:43) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*2
c=notas[2]*3
d=notas[3]*4
media=a+b+c+d/10
print(round(media,2))

-- EXECUTION TIME:
0.500024
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.78
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
38.78
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:43:43) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*2
c=notas[2]*3
d=notas[3]*4
media=a+b+c+d/10
print(round(media,2))

-- EXECUTION TIME:
0.702502
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.78
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:44:31) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1+1
b=notas[1]*2+1
c=notas[2]*3+1
d=notas[3]*4+1
media=a+b+c+d/10
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:44:59) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*2
c=notas[2]*3
d=notas[3]*4
media=a+b+c+d/10
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:48:20) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*1
c=notas[2]*2
d=notas[3]*3
media=a+b+c+d/10
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:48:47) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*1
c=notas[2]*2
d=notas[3]*3
media=a+b+c+d/40
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:49:19) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*1
c=notas[2]*2
d=notas[3]*3
media=a+b+c+d/60
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:49:41) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*1
c=notas[2]*2
d=notas[3]*3
media=a+b+c+d/100
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:50:08) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
a=notas[0]*1
b=notas[1]*2
c=notas[2]*3
d=notas[3]*4
media=a+b+c+d/100
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:52:51) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
print(notas[1]*2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:56:01) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/10
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:23:32) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:23:34) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:23:34) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:23:36) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
0.47717
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
38.06
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
digite as notas: 38.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:23:40) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
0.87407
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
38.06
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:23:41) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.1156
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
38.06
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:23:43) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.51384
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:23:44) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.25049
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:23:44) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.13062
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:23:45) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.25194
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
38.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:23:45) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.3081
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:23:46) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.40225
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:23:46) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.48999
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:26:02) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:26:02) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:26:02) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:26:03) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:26:03) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:08) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
0.469713
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
digite as notas: 38.06
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:09) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
1.3515
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
38.06
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:11) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.68258
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:

-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:12) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.38425
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
38.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:13) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.61002
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1593/main.py", line 5, in <module>
    d=notas[2]*3
IndexError: index 2 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:14) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
4.42764
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1593/main.py", line 5, in <module>
    d=notas[2]*3
IndexError: index 2 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:16) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.66237
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1593/main.py", line 5, in <module>
    d=notas[2]*3
IndexError: index 2 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:17) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.22109
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1593/main.py", line 5, in <module>
    d=notas[2]*3
IndexError: index 2 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:20) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.22142
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:22) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.1092
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:22) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.72874
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:23) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.87035
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1593/main.py", line 5, in <module>
    d=notas[2]*3
IndexError: index 2 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:26) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.71092
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:26) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.30105
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
38.06
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:30) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.12016
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:26:30) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:30) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.81469
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:32) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.54052
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:32) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.61299
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:34) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.73687
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:

-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:34) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.9999
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:39) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.96182
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:40) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.07321
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:41) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.43461
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1593/main.py", line 5, in <module>
    d=notas[2]*3
IndexError: index 2 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:43) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.44698
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1593/main.py", line 5, in <module>
    d=notas[2]*3
IndexError: index 2 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:43) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.91158
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:45) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.86406
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:48) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.38218
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1593/main.py", line 5, in <module>
    d=notas[2]*3
IndexError: index 2 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:50) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.04067
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:50) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.52185
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:51) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.13305
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
10.5
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
38.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:52) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.93021
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
10.5
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:54) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.21423
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
38.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:57) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.42701
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:

-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:58) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.70867
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:59) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
4.42663
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:

-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:26:59) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.91365
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
10.5
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:

-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
digite as notas: 38.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:27:00) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
3.68866
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
10.5
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
digite as notas:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:27:01) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.903
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
38.06
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
digite as notas:
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
digite as notas:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:27:01) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*2
d=notas[2]*3
e=notas[3]*4
media=b+c+d+e/100
print(round(media,2))

-- EXECUTION TIME:
2.27108
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
digite as notas: 10.5
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
digite as notas: 10.5
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
digite as notas:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:28:13) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*1
d=notas[2]*2
e=notas[3]*3
media=b+c+d+e/70
print(round(media,2))

-- EXECUTION TIME:
0.436486
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
24.71
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
digite as notas: 7.0
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
24.71
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:28:18) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*1
d=notas[2]*2
e=notas[3]*3
media=b+c+d+e/70
print(round(media,2))

-- EXECUTION TIME:
0.876296
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
24.71
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
24.71
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:28:18) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*1
d=notas[2]*2
e=notas[3]*3
media=b+c+d+e/70
print(round(media,2))

-- EXECUTION TIME:
1.66204
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
24.71
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
7.0
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:28:18) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*1
d=notas[2]*2
e=notas[3]*3
media=b+c+d+e/70
print(round(media,2))

-- EXECUTION TIME:
1.05277
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
24.71
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
24.71
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:28:19) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*1
d=notas[2]*2
e=notas[3]*3
media=b+c+d+e/70
print(round(media,2))

-- EXECUTION TIME:
2.30709
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
24.71
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
7.0
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:28:19) 
-- CODE:
from numpy import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*1
d=notas[2]*2
e=notas[3]*3
media=b+c+d+e/70
print(round(media,2))

-- EXECUTION TIME:
2.32008
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
24.71
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
7.0
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:22) 
-- CODE:
from numpy import *
from math import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*1
d=notas[2]*2
e=notas[3]*3
media=b+c+d+e/70
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:33:25) 
-- CODE:
from numpy import *
from math import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*1
d=notas[2]*2
e=notas[3]*3
media=b+c+d+e/70
print(round(media,2))

-- EXECUTION TIME:
0.509913
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
24.71
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
24.71
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:33:27) 
-- CODE:
from numpy import *
from math import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*1
d=notas[2]*2
e=notas[3]*3
media=b+c+d+e/70
print(round(media,2))

-- EXECUTION TIME:
2.29777
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
24.71
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:

-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:33:27) 
-- CODE:
from numpy import *
from math import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*1
d=notas[2]*2
e=notas[3]*3
media=b+c+d+e/70
print(round(media,2))

-- EXECUTION TIME:
1.47302
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
24.71
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
7.0
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:33:27) 
-- CODE:
from numpy import *
from math import *
notas=array(eval(input("digite as notas: ")))
b=notas[0]*1
c=notas[1]*1
d=notas[2]*2
e=notas[3]*3
media=b+c+d+e/70
print(round(media,2))

-- EXECUTION TIME:
2.27212
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
24.71
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
7.0
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:38:38) 
-- CODE:
from numpy import *
from math import *
notas=array(eval(input("digite as notas: ")))
soma=0
i=0
while(i<size(v)):
	soma=soma+log(v[i]+1)
	i=i+1
n=size(v0)
divisao=soma/n
M=exp(divisao)-1
print(round(media,2))

-- EXECUTION TIME:
0.43275
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1593/main.py", line 6, in <module>
    while(i<size(v)):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:38:38) 
-- CODE:
from numpy import *
from math import *
notas=array(eval(input("digite as notas: ")))
soma=0
i=0
while(i<size(v)):
	soma=soma+log(v[i]+1)
	i=i+1
n=size(v0)
divisao=soma/n
M=exp(divisao)-1
print(round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:38:40) 
-- CODE:
from numpy import *
from math import *
notas=array(eval(input("digite as notas: ")))
soma=0
i=0
while(i<size(v)):
	soma=soma+log(v[i]+1)
	i=i+1
n=size(v0)
divisao=soma/n
M=exp(divisao)-1
print(round(media,2))

-- EXECUTION TIME:
0.496369
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1593/main.py", line 6, in <module>
    while(i<size(v)):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:39:48) 
-- CODE:
from numpy import *
from math import *
notas=array(eval(input("digite as notas: ")))
soma=0
i=0
while(i<size(v)):
	soma=soma+log(v[i]+1)
	i=i+1
n=size(v0)
divisao=soma/n
M=exp(divisao)-1
print(round(M,2))

-- EXECUTION TIME:
0.453993
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1593/main.py", line 6, in <module>
    while(i<size(v)):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:39:49) 
-- CODE:
from numpy import *
from math import *
notas=array(eval(input("digite as notas: ")))
soma=0
i=0
while(i<size(v)):
	soma=soma+log(v[i]+1)
	i=i+1
n=size(v0)
divisao=soma/n
M=exp(divisao)-1
print(round(M,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:39:50) 
-- CODE:
from numpy import *
from math import *
notas=array(eval(input("digite as notas: ")))
soma=0
i=0
while(i<size(v)):
	soma=soma+log(v[i]+1)
	i=i+1
n=size(v0)
divisao=soma/n
M=exp(divisao)-1
print(round(M,2))

-- EXECUTION TIME:
0.368416
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1593/main.py", line 6, in <module>
    while(i<size(v)):
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
